# denet_test

./: .pre-commit-config.yaml  README.MD  pyproject.toml  services.py  settings.py
src/: manage.py
src/core/: services.py  urls.py  views.py
src/polygon_info/: asgi.py  settings.py  urls.py  wsgi.py
