[tool.poetry]
name = "denet-test"
version = "0.1.0"
description = ""
authors = ["Danil Galeev <galoffdan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.3.0"
python-dotenv = "^1.0.1"
moralis = "^0.1.49"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
ipython = "^8.28.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120